--- a/index.html
+++ b/index.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Avtomobillar Revolutsiyasi</h1>
-    <img src="photo_2025-06-28_15-00-05.jpg" alt="">
-    <h1>Avtomobil saoatining rivojlanish</h1>
-    <table border="1">
-        <tr>
-            <th>Davr</th>
-            <th>Tavsif </th>
-        </tr>
-        <tr>
-            <th>1900-yillar</th> 
-            <th>Birinchi avtomobillar ommaviy ishlab chiqarila boshladi.</th>
-        </tr>
-        <tr>
-            <th>1950-yillar</th>
-            <th>Avtomabillarda xavfsizlik tizimlari rivojlanadi.</th>
-        </tr>
-        <tr>
-            <th>2000-yillar</th>
-            <th>Elektr va avtonom avtomobillar paydo bo;ldi.</th>
-        </tr>
-    </table>
+    <div style="background-color: mediumseagreen;">
+        <h1>Bizning Kompaniya</h1>
 
-    <h1>Avtomabillarda Taraqqiyoti</h1>
 
-     <div class="card">
-        <img src="photo_2025-06-28_15-15-24.jpg" alt="">
-        <h2>Elektr Avtomobillar</h2>
-        <p>Elektr avtomobillar ekalogik toza va yoqilg'iga kam harajat talab qiladi.</p>
+        <img src="photo_2025-06-28_16-31-19.jpg" alt="">
+
+        <p>Darslar 8 yoshdan 18 yoshgacha barcha bolalar uchun, ayniqsa kompyuter o'yinlaridan cholg'imaydigan va dasturlash olamiga qiziqishi katta bo'lganlar uchun.</p>
     </div>
 
-    <div class="card">
-        <img src="photo_2025-06-28_14-49-38.jpg" alt="">
-        <h2>Avtonom Avtomobillar</h2>
-        <p>Sun'iy intellekt bilan boshqariladigan avtomobillar haydovchisiz harakatlana oladi.</p>
+    <div style="background-color: gainsboro;">
+        <h1>Biz bilan bog'laning</h1>
+
+        <input type="text" placeholder="Ismingiz">
+        <br>
+        <br>
+        <input type="text" placeholder="Email manzilingiz">
+        <br>
+        <br>
+        <input type="text" placeholder="Xabar yozing">
+        <br>
+        <br>
+        <input type="submit" placeholder="Yuborish">
     </div>
+
+    <div style="background-color: white;">
+        <h1>Bizning jamoa</h1>
+
+        <img src="photo_2025-06-28_17-05-46.jpg" alt="">
+
+        <table border="1">
+            <tr>
+                <th>Ism</th>
+                <th>Lavozim</th>
+            </tr>
+            <tr>
+                <th>Ali Valiyev</th>
+                <th>Frontend Developer</th>
+            </tr>
+            <tr>
+                <th>Laylo Karomova</th>
+                <th>Designer</th>
+            </tr>
+            <tr>
+                <th>Begzod Rustamov</th>
+                <th>Project Manager</th>
+            </tr>
+        </table>
+    </div>
+
+    <div>
+        <h1>Ofisimiz manzili</h1>
+        <br><br>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d374.2924830424532!2d69.28666711864233!3d41.36670018084243!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8d2b7364ca3b%3A0x17ae9b1138235319!2sMARS%20IT%20Yunusabad!5e0!3m2!1suz!2s!4v1751112831034!5m2!1suz!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+    <br>
+    <h6>2025 Bizning. Barcha Huquqlar himoyalangan.</h6>
 </body>
 </html>
